--- a/room3x.html
+++ b/room3x.html
@@ -207,7 +207,7 @@
                             </p>
                             <blockquote>
                                 <p>
-                                    Отмечали в этом коттедже на втором этаже корпоратив. Номер отличные, все просторные комнаты, большая кухня, новая техника и посуда.
+                                    Отличная база, море в двух шагах, на территории есть мангал, стоянка, кафешка, детская площадка, база охраняется, много роз, море чистое, песок чистят, для отдыха с детьми лучший вариант.
                                 </p>
                             </blockquote>
                             <p>
