--- a/rules.html
+++ b/rules.html
@@ -133,7 +133,7 @@
                 <div class="page-content-wrapper center-relative content-1170">                
                     <div class="page-content">
                         <div>
-                            <p><b>Настоящие правила устанавливают порядок бронирования, поселения и проживания  апартаментах для отдыха в Кирилловке на базе отдыха «Алена».
+                            <p><b>Настоящие правила устанавливают порядок бронирования, поселения и проживания апартаментов для отдыха в Кирилловке на базе отдыха «Алена».
                             </b></p>
                             <ul>
                                 <li>Регистрация заезда: с 14:00 - 22:00</li>
@@ -142,15 +142,15 @@
                         </div>
                         <div>
                             <p><b>Особенности бронирования и предоставления дополнительных мест</b></p>
-                            <p> В этом объекте размещения дети в возрасте 18 лет и старше считаются взрослыми.</p>
-                            <p>Разрешается проживание детей любого возраста.</p>
+                            <p>- В этом объекте размещения дети в возрасте 18 лет и старше считаются взрослыми.</p>
+                            <p>- Разрешается проживание детей любого возраста.</p>
                             <p>- Этот объект размещения принимает расчет наличными или переводом на карту.</p>
                             <p>- Для бронирования номера необходимо внести оплату размером за первые сутки проживания.</p>
                             <p>- Чтобы узнать точные цены и информацию о наличии мест, свяжитесь с администрацией по контактному номеру.</p>
                             <p>- Дополнительные места в номере предоставляются за дополнительную плату.</p>
                             <p>- Детские кровати в номере не предусмотрены.</p>
                             <p>- Максимальное количество гостей в номере - до 3 человек.</p>
-                            <p>Внимание! В этом объекте нельзя устраивать девичники, мальчишники и другие подобные вечеринки. Пожалуйста, заранее сообщите LightHouse предполагаемое время прибытия. Все контакты указаны на соответствующей странице <a href="contact.html">Контакты.</a></p>
+                            <p>Внимание! В этом объекте нельзя устраивать девичники, мальчишники и другие подобные вечеринки. Пожалуйста, заранее сообщите LightHouse предполагаемое время прибытия. Все контакты указаны на соответствующей странице <b></b><a style="color: #000" href="contact.html">Контакты.</a></b></p>
                         </div>
                         <div>
                             <p><b>Запрещается</b></p>
